<resources>
    <string name="app_name">DrinksApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Entrar</string>
    <string name="txt_salvar">Salvar</string>
    <string name="btn_link_to_register">Não é cadastrado? Clique aqui.</string>
    <string name="btn_link_to_login">Já é cadastrado? Entre aqui.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="acao_pesquisar">Pesquisar</string>
    <string name="acao_novo">Novo</string>
    <string name="acao_info">Info</string>
    <string name="hint_busca">Procurar Produto</string>
    <string name="sobre_titulo">Em Desenvolvimento</string>
    <string name="sobre_mensagem">Em desenvolvimento...</string>
    <string name="sobre_botao_site">Site</string>
    <string name="nome">Nome</string>
    <string name="rua">Endereço</string>
    <string name="classificacao">Classificação</string>
    <string name="acao_delete">Excluir</string>
    <plurals name="numero_selecionados">
        <item quantity="one">1 selecionado</item>
        <item quantity="other">%d selecionados</item>
    </plurals>
    <string name="mensagem_excluir">%d itens excluídos.</string>
    <string name="desfazer">Desfazer</string>
    <string name="acao_compartilhar">Compartilhar</string>
    <string name="texto_compartilhar">Comprei o %1$s e o classifiquei</string>
    <string name="acao_editar">Editar</string>
    <string name="erro_sincronizacao">Erro ao sincronizar com o servidor.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


    <string name="hint_foto">Digite um texto para a foto</string>
    <string name="texto_arquivo">Arquivo a ser enviado</string>
    <string name="btn_selecionar_foto">Selecionar arquivo</string>
    <string name="btn_enviar_foto">Enviar Foto</string>
    <string name="msg_sucesso">Upload realizado com sucesso</string>
    <string name="msg_falha">Falha ao enviar arquivo</string>

    <string name="google_maps_key">AIzaSyD9NnrPST6IJ8b-Y_Nu09m60yIRbHprhpY</string>
    <string name="edt_name">Nome</string>
    <string name="edt_username">Email</string>
    <string name="edt_password">Senha</string>
    <string name="edt_telefone">Telefone</string>
    <string name="tela_cadastro">Cadastro</string>

    <string name="menu_item_carrinho">Adicionar ao carrinho</string>

    <string name="dialog_produtos_ok">OK</string>
    <string name="dialog_produtos_cancelar">Cancelar</string>
    <string name="txt_dialog_produtos">Selecione a quantidade</string>
    <string name="btn_ver_carrinho">Carrinho</string>
    <string name="btn_comprar">Comprar</string>
    <string name="txt_taxa_entrega">Taxa de entrega</string>
    <string name="txt_valor_taxa_entrega">R$ 8,00</string>
    <string name="txt_total_pedido">Total do pedido</string>
    <string name="txt_valor_unitario">Valor Unitário</string>
    <string name="btn_add_carrinho">Adicionar ao Carrinho</string>
    <string name="txt_pagamento_entrega">Pague na entrega</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="cartao_debito">Cartão Débito</string>
    <string name="edt_cep">CEP</string>
    <string name="btn_cep">Consultar</string>
    <string name="edt_logradouro">Logradouro</string>
    <string name="edt_bairro">Bairro</string>
    <string name="edt_cidade">Cidade</string>
    <string name="edt_UF">Estado</string>
    <string name="btn_realizar_pedido">Realizar Pedido</string>
    <string name="edt_numero">Número</string>
    <string name="txt_endereco_entrega">Endereço de entrega</string>
    <string name="edt_complemento">Complemento</string>
    <string name="txtListaVazia">Você ainda não realizou pedidos.</string>

    <string name="estabelecimento">Estabelecimento</string>
    <string name="endereco">Endereço</string>
    <string name="estabelecimento_favorito">Estabelecimentos Favoritos</string>
    <string name="produtos">Produtos</string>
    <string name="produtos_favoritos">Produtos Favoritos</string>
    <string name="status">Status</string>
    <string name="data_pedido">Data do Pedido</string>
    <string name="valor_total_pedido">Valor total</string>
    <string name="txt_detalhes_pedido">Detalhes do Pedido</string>
    <string name="pedidos">Pedidos</string>
    <string name="confirmar_cancelamento">Deseja cancelar o seu pedido?</string>
    <string name="dialog_cancelamento">Cancelamento de Pedido</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="master">Master</string>
    <string name="visa">Visa</string>
    <string name="bandeira_cartao">Escolha a bandeira de seu cartão</string>
    <string name="bandeira">Bandeira</string>

    <string name="status_aguardando">AGUARDANDO</string>
    <string name="status_cancelado">CANCELADO</string>
    <string name="edt_pesquisa_precos">Digite o produto e compare preços</string>
    <string name="pagamento">Pagamento</string>
    <string name="carrinho_compras">Carrinho de Compras</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_logout">Sair</string>
    <string name="email">Email</string>

    <string-array name="ordem_precos">
        <item>Ordenar por</item>
        <item>Menor preço</item>
        <item>Mario preço</item>
    </string-array>

    <string name="facebook_app_id">146127729481088</string>

</resources>

