<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_claro_color"
    android:padding="@dimen/medium_padding"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_padding"
        android:background="@color/white_color"
        android:hint="@string/edt_numero"
        android:inputType="number"
        android:padding="@dimen/small_padding"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <EditText
        android:id="@+id/edt_complemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding"
        android:background="@color/white_color"
        android:hint="@string/edt_complemento"
        android:inputType="text"
        android:padding="@dimen/small_padding"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint" />

    <Button
        android:id="@+id/btnDialogComplementos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_botoes"
        android:text="@string/btn_cep"
        android:textColor="@color/btn_login"
        android:textSize="@dimen/txt_medio_botao" />

</LinearLayout>