<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white_color"
                android:drawableRight="@drawable/ic_account"
                android:hint="@string/edt_username"
                android:inputType="textEmailAddress"
                android:padding="@dimen/small_padding"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/edt_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_color"
                android:drawableRight="@drawable/ic_lock_password"
                android:hint="@string/edt_password"
                android:inputType="numberPassword"
                android:padding="@dimen/small_padding"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/background_botoes"
                android:text="@string/btn_login"
                android:textColor="@color/btn_login"
                android:textSize="@dimen/txt_medio_botao" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textSize="@dimen/txt_medio_botao" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>


            <!--<com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/medium_padding"
                android:layout_marginRight="@dimen/medium_padding"/>-->

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
