<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="120dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/medium_padding">


            <EditText
                android:id="@+id/edt_nome_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white_color"
                android:drawableRight="@drawable/ic_account"
                android:hint="@string/edt_name"
                android:inputType="text"
                android:padding="@dimen/small_padding"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/edt_email_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white_color"
                android:drawableRight="@drawable/ic_email"
                android:hint="@string/edt_username"
                android:inputType="textEmailAddress"
                android:padding="@dimen/small_padding"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />


            <EditText
                android:id="@+id/edt_senha_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white_color"
                android:drawableRight="@drawable/ic_lock_password"
                android:hint="@string/edt_password"
                android:inputType="numberPassword"
                android:padding="@dimen/small_padding"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/edt_telefone_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_padding"
                android:background="@color/white"
                android:drawableRight="@drawable/ic_phone"
                android:hint="@string/edt_telefone"
                android:inputType="numberSigned"
                android:padding="@dimen/small_padding"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/btn_login_bg"
                android:text="@string/btn_register"
                android:textSize="@dimen/txt_medio_botao"
                android:textColor="@color/white" />


        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>