<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_claro_color"
    android:orientation="vertical"
    android:padding="@dimen/medium_padding">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/medium_padding"
        android:textColor="@color/black_color"
        android:text="@string/bandeira_cartao" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:divider="@drawable/border_radio_button"
        android:gravity="left"
        android:orientation="horizontal"
        android:padding="@dimen/medium_padding">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_bandeira_cartao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@drawable/border_radio_button"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_mastercard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_padding"
                android:buttonTint="@color/red_color"
                android:text="@string/master"
                android:textColor="@color/black_color" />

            <RadioButton
                android:id="@+id/radio_visa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:buttonTint="@color/red_color"
                android:text="@string/visa"
                android:textColor="@color/black_color" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_mastercard" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/imageView3"
            android:layout_alignStart="@+id/imageView3"
            android:layout_below="@+id/imageView3"
            app:srcCompat="@drawable/ic_visa" />


    </RelativeLayout>

</LinearLayout>